--- a/msg.html
+++ b/msg.html
@@ -4,13 +4,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Drag Papers ❤️</title>
+  <title>Happy Birthday ASHIFA</title>
   <link rel='stylesheet'
     href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+
+
+
   <!-- partial:index.partial.html -->
   <!-- A pen by Developer Rahul  -->
   <div class="paper heart"></div>
@@ -21,37 +24,112 @@
     </video>
   </div>
   <div class="paper image">
-    <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
-    <img src="images/1.jpeg" />
-  </div>
-
-  <div class="paper image">
-    <p></p>
-    <img src="images/2.jpeg" />
-  </div>
-
-  <div class="paper image">
-    <p>How can be </p>
-    <p> someone so cute ❤️ </p>
-    <img src="images/3.jpg" />
+    <p>My wonder women </p>
+    <p> My Queen❤️</p>
+    <p> ASHIFA</p>
+    <img src="images/ashi.jpg" />
   </div>
 
   <div class="paper red">
-    <p class="p1"> and My Favorite</p>
-    <p class="p2">Person 😍</p>
+    <p class="p1"> You are the most</p>
+    <p class="p1"> Precious</p>
+    <p class="p1"> Thing ever happen to my life</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> But I always want</p>
+    <p class="p1"> you Happy</p>
+    <p class="p1">&</p>
+    <p class="p1">Smiling 😊</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> Makes you angry</p>
+    <p class="p1"> We Fight</p>
+    <p class="p1">Make you sad</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> I Know sometimes</p>
+    <p class="p1"> It's hard</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> Through Ups</p>
+    <p class="p1"> and</p>
+    <p class="p1">Down 😍</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> I want you to</p>
+    <p class="p1"> Know</p>
+    <p class="p1">No Matter How Far </p>
+    <p class="p1">We Are</p>
+  </div>
+  <div class="paper">
+    <p class="p1">I just want to tell you something.</p>
+  </div>
+  
+  <div class="paper red">
+    <p class="p1"> stay HEALTHY</p>
+    <p class="p1"> AND</p>
+    <p class="p1"> stay BLESSED</p>
+  </div>
+  
+  <div class="paper">
+    <p class="p1"> HAPPINESS 🙂</p>
+    <p class="p1"> LONGLIFE 😇</p>
+    <p class="p1"> JOY 🥳</p>
+
+  </div>
+
+  
+  <div class="paper red">
+    <p class="p1"> I wish you a lot</p>
+    <p class="p1"> of ...'</p>
+  </div>
+  <div class="paper">
+    <p class="p1"> In Your Special Day</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> I wanted to But</p>
+    <p class="p1"> I can't be there'</p>
+    <p class="p1">with you 😞</p>
   </div>
 
   <div class="paper">
-    <p class="p1">You are Cute </p>
-    <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+    <p class="p1">Who makes me Feel beautiful and Loved.</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> Happy Birthday</p>
+    <p class="p1"> To You My</p>
+    <p class="p1">Love ... ❤️</p>
+  </div>
+
+
+  <div class="paper">
+    <p class="p1">So Today is June 6th!</p>
+  </div>
+  <div class="paper red">
+    <p class="p1"> Keep Calm</p>
+    <p class="p1"> Because</p>
+    <p class="p1">It's YOUR </p>
+    <p class="p1">Birthday 😍</p>
+  </div>
+
+
+  <div class="paper image">
+    <p class="p1">Special Day <span style="color: red !important;">❤️</span></p>
+
+    <img src="images/6_th_june.jpeg" />
+  </div>
+  <div class="paper">
+    <p class="p1">Hi My Love... <span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
     <p class="p1">Drag the papers to move!</p>
   </div>
 
-
+  <!-- <audio controls autoplay loop>
+    <source src="music.mp3" type="audio/ogg">
+    <embed src="music.mp3" autostart="true" loop="true" hidden="true">
+  </audio> -->
 
   <!-- partial -->
 
