--- a/msg.html
+++ b/msg.html
@@ -19,7 +19,7 @@
   <div class="paper heart"></div>
   <div class="paper video">
     <video controls>
-      <source src="./video/video_1.mp4" type="video/mp4">
+      <source src="./video/wish.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
