--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 	<div class="loading"></div>
-	<audio class="song" controls>
+	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
